Val and Error implemented
